--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -4,10 +4,7 @@
 name: Package App
 
 on:
-  push:
-    branches: [ "main" ]
-  pull_request:
-    branches: [ "main" ]
+  workflow_dispatch:
 
 permissions:
   contents: read
@@ -26,7 +23,7 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install pyinstaller chinesecalendar
+        pip install pyinstaller chinesecalendar APScheduler Pillow pywin10 pywin32 requests sqlitedict
     - name: Copy Hook
       run: |
         mkdir cache
@@ -41,3 +38,17 @@ jobs:
     - name: Delete Cache
       run: |
         rmdir cache -Recurse -Force
+    - name: Create ZIP Archive
+      run: |
+        Compress-Archive -Path "CountBoard.exe","icons" -DestinationPath "CountBoard.zip" -Force
+        Compress-Archive -Path "CountBoard.exe" -DestinationPath "app-update.zip" -Force
+    - name: Upload Main Program Archive
+      uses: actions/upload-artifact@v3.1.2
+      with:
+        name: CountBoard
+        path: CountBoard.zip
+    - name: Upload APP-Update Archive
+      uses: actions/upload-artifact@v3.1.2
+      with:
+        name: app-update
+        path: app-update.zip
