--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -24,6 +24,18 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install pyinstaller chinesecalendar APScheduler Pillow pywin10 pywin32 requests sqlitedict
+    - name: Download UPX
+      uses: houqp/download-release-assets-action@v1.0.1
+      with:
+        repo: upx/upx
+        token: ${{ github.token }}
+        match: (win64)
+        release: v4.0.2
+        rename: UPX.zip
+    - name: Extract UPX
+      run: |
+        Expand-Archive .\UPX.zip -DestinationPath .
+        ren .\upx-4.0.2-win64 UPX
     - name: Copy Hook
       run: |
         mkdir cache
@@ -33,7 +45,7 @@ jobs:
     - name: Start Packaging
       run: |
         cd cache
-        pyinstaller -F -i "..\icons\favicon.ico" "..\CountBoard.py" -w --additional-hooks-dir=./hooks
+        pyinstaller --upx-dir UPX -F -i "..\icons\favicon.ico" "..\CountBoard.py" -w --additional-hooks-dir=./hooks
         copy dist\CountBoard.exe ..
     - name: Delete Cache
       run: |
