--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -24,31 +24,19 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install pyinstaller chinesecalendar APScheduler Pillow pywin10 pywin32 requests sqlitedict
-    - name: Download UPX
-      uses: houqp/download-release-assets-action@v1.0.1
-      with:
-        repo: upx/upx
-        token: ${{ github.token }}
-        match: (win64)
-        release: v4.0.2
-        rename: UPX.zip
-    - name: Extract UPX
+    - name: Download And ExtractUPX
       run: |
+        Invoke-WebRequest -Uri "https://github.com/upx/upx/releases/download/v4.0.2/upx-4.0.2-win64.zip" -OutFile .\UPX.zip
         Expand-Archive .\UPX.zip -DestinationPath .
         ren .\upx-4.0.2-win64 UPX
-    - name: Copy Hook
+    - name: Start Packaging
       run: |
         mkdir cache
         cd cache
         mkdir hooks
         copy ..\other\hook-apscheduler.py hooks
-    - name: Start Packaging
-      run: |
-        cd cache
         pyinstaller --upx-dir UPX -F -i "..\icons\favicon.ico" "..\CountBoard.py" -w --additional-hooks-dir=./hooks
         copy dist\CountBoard.exe ..
-    - name: Delete Cache
-      run: |
         rmdir cache -Recurse -Force
     - name: Upload Main Program
       uses: actions/upload-artifact@v3.1.2
