--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -24,7 +24,7 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install pyinstaller chinesecalendar APScheduler Pillow pywin10 pywin32 requests sqlitedict
-    - name: Download And ExtractUPX
+    - name: Download And Extract UPX
       run: |
         Invoke-WebRequest -Uri "https://github.com/upx/upx/releases/download/v4.0.2/upx-4.0.2-win64.zip" -OutFile .\UPX.zip
         Expand-Archive .\UPX.zip -DestinationPath .
@@ -35,8 +35,9 @@ jobs:
         cd cache
         mkdir hooks
         copy ..\other\hook-apscheduler.py hooks
-        pyinstaller --upx-dir UPX -F -i "..\icons\favicon.ico" "..\CountBoard.py" -w --additional-hooks-dir=./hooks
+        pyinstaller --upx-dir "..\UPX" -F -i "..\icons\favicon.ico" "..\CountBoard.py" -w --additional-hooks-dir=./hooks
         copy dist\CountBoard.exe ..
+        cd ..
         rmdir cache -Recurse -Force
     - name: Upload Main Program
       uses: actions/upload-artifact@v3.1.2
