--- a/.github/workflows/version.yml
+++ b/.github/workflows/version.yml
@@ -33,5 +33,5 @@ jobs:
     - name: Upload
       uses: actions/upload-artifact@v3.1.2
       with:
-        name: ${{steps.versionGet.outputs.name}}
+        name: test
         path: test.txt
