--- a/.github/workflows/package.yml
+++ b/.github/workflows/package.yml
@@ -43,12 +43,12 @@ jobs:
       run: |
         $versionString = Select-String -Path .\CountBoard.py "\d+(\.\d){2}"
         $versionString -match "\d+(\.\d){2}"
-        $name = -join ('name=CountBoard-V',$matches[0])
-        echo $name >> "$GITHUB_OUTPUT"
+        $version = $matches[0]
+        echo "name=CountBoard-V$version" >> $env:GITHUB_OUTPUT
     - name: Upload Main Program
       uses: actions/upload-artifact@v3.1.2
       with:
-        name: ${{steps.versionGet.outputs.name}}
+        name: ${{ steps.versionGet.outputs.name }}
         path: |
           icons
           CountBoard.exe
