--- a/.github/workflows/package.yml
+++ b/.github/workflows/package.yml
@@ -41,25 +41,14 @@ jobs:
         Invoke-WebRequest -Uri "https://github.com/upx/upx/releases/download/v4.0.2/upx-4.0.2-win64.zip" -OutFile .\UPX.zip
         Expand-Archive .\UPX.zip -DestinationPath .
         ren .\upx-4.0.2-win64 UPX
-    - name: Package App (Release)
-      if: ${{ inputs.mode }} == "release"
+    - name: Package App
       run: |
         mkdir cache
         cd cache
         mkdir hooks
         copy ..\other\hook-apscheduler.py hooks
-        pyinstaller --upx-dir "..\UPX" -F -i "..\icons\favicon.ico" "..\CountBoard.py" -w --additional-hooks-dir=./hooks
-        copy dist\CountBoard.exe ..
-        cd ..
-        rmdir cache -Recurse -Force
-    - name: Package App (Debug)
-      if: ${{ inputs.mode }} == "debug"
-      run: |
-        mkdir cache
-        cd cache
-        mkdir hooks
-        copy ..\other\hook-apscheduler.py hooks
-        pyinstaller --upx-dir "..\UPX" -F -i "..\icons\favicon.ico" "..\CountBoard.py" --additional-hooks-dir=./hooks
+        if (${{ inputs.mode }} -eq 'release'){pyinstaller --upx-dir "..\UPX" -F -i "..\icons\favicon.ico" "..\CountBoard.py" -w --additional-hooks-dir=./hooks}
+        if (${{ inputs.mode }} -eq 'debug'){pyinstaller --upx-dir "..\UPX" -F -i "..\icons\favicon.ico" "..\CountBoard.py" --additional-hooks-dir=./hooks}  
         copy dist\CountBoard.exe ..
         cd ..
         rmdir cache -Recurse -Force
@@ -79,7 +68,6 @@ jobs:
           icons
           CountBoard.exe
     - name: Upload APP-Update
-      if: ${{ inputs.mode }} == 'release'
       uses: actions/upload-artifact@v3.1.2
       with:
         name: app-update
