--- a/.github/workflows/package.yml
+++ b/.github/workflows/package.yml
@@ -77,7 +77,7 @@ jobs:
       run: |
         Compress-Archive -Path "CountBoard.exe","icons" -DestinationPath "main.zip" -Force
         Compress-Archive -Path "CountBoard.exe" -DestinationPath "app-update.zip" -Force
-    - name: Create Draft Release
+    - name: Create Release
       id: create_release
       if: ${{ inputs.publish }}
       uses: actions/create-release@v1
