--- a/.github/workflows/package.yml
+++ b/.github/workflows/package.yml
@@ -47,8 +47,8 @@ jobs:
         cd cache
         mkdir hooks
         copy ..\other\hook-apscheduler.py hooks
-        if ('${{ inputs.mode }}' -eq 'release'){pyinstaller --upx-dir "..\UPX" -F -i "..\icons\favicon.ico" "..\CountBoard.py" -w --additional-hooks-dir=./hooks}
-        if ('${{ inputs.mode }}' -eq 'debug'){pyinstaller --upx-dir "..\UPX" -F -i "..\icons\favicon.ico" "..\CountBoard.py" --additional-hooks-dir=./hooks}  
+        if ('${{ inputs.mode }}' -eq 'release'){pyinstaller --upx-dir "..\UPX" -F -i "..\other\favicon.ico" "..\CountBoard.py" -w --additional-hooks-dir=./hooks}
+        if ('${{ inputs.mode }}' -eq 'debug'){pyinstaller --upx-dir "..\UPX" -F -i "..\other\favicon.ico" "..\CountBoard.py" --additional-hooks-dir=./hooks}  
         copy dist\CountBoard.exe ..
         cd ..
         rmdir cache -Recurse -Force
@@ -60,17 +60,10 @@ jobs:
         $version = $matches[0]
         echo "name=CountBoard-V$version" >> $env:GITHUB_OUTPUT
         echo "version=$version" >> $env:GITHUB_OUTPUT
-    - name: Upload Main Program
+    - name: Upload Artifact
       uses: actions/upload-artifact@v3.1.2
       with:
         name: ${{ steps.versionGet.outputs.name }}
-        path: |
-          icons
-          CountBoard.exe
-    - name: Upload APP-Update
-      uses: actions/upload-artifact@v3.1.2
-      with:
-        name: app-update
         path: CountBoard.exe
     - name: Create ZIP Archive
       if: ${{ inputs.publish }}
@@ -89,7 +82,7 @@ jobs:
         body_path: versionText.md
         draft: false
         prerelease: false
-    - name: Release Main Program
+    - name: Upload Asset
       id: upload-release-main
       if: ${{ inputs.publish }}
       uses: actions/upload-release-asset@v1
@@ -97,17 +90,6 @@ jobs:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with:
         upload_url: ${{ steps.create_release.outputs.upload_url }}
-        asset_path: main.zip
-        asset_name: ${{ steps.versionGet.outputs.name }}.zip
-        asset_content_type: application/zip
-    - name: Release App Update
-      id: upload-release-update
-      if: ${{ inputs.publish }}
-      uses: actions/upload-release-asset@v1
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      with:
-        upload_url: ${{ steps.create_release.outputs.upload_url }}
-        asset_path: app-update.zip
-        asset_name: app-update.zip
-        asset_content_type: application/zip
+        asset_path: CountBoard.exe
+        asset_name: CountBoard.exe
+        asset_content_type: application/octet-stream
